--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,78 @@
-# Core Packages
-fastapi==0.109.1
-uvicorn==0.27.0
-python-multipart==0.0.6
-
-# Data Processing
-pandas==2.2.1
-numpy==1.26.4
-
-# File Handling
-pypdf==4.1.0
-python-docx==0.8.11
-
-# OpenAI Integration
-openai==1.12.0
-
-# Logging and Utilities
-loguru==0.7.2
-python-dotenv==1.0.0
-
-# Additional Utilities
-typing-extensions==4.10.0
-python-dateutil==2.9.0
-pytz==2024.1
-
-# CORS Middleware
-starlette==0.36.3
-
-# CSV Handling
-csvkit==1.2.0
-
-# Development Tools
-black==24.2.0
-flake8==7.0.0
-pytest==8.0.2
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+blis==1.2.0
+catalogue==2.0.10
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.20.0
+colorama==0.4.6
+confection==0.1.5
+cymem==2.0.11
+distro==1.9.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+et_xmlfile==2.0.0
+fastapi==0.115.8
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.5
+jiter==0.8.2
+joblib==1.4.2
+langcodes==3.5.0
+language_data==1.3.0
+lxml==5.3.1
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.1.0
+murmurhash==1.0.12
+nltk==3.9.1
+numpy==2.2.3
+openai==1.63.1
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.2.3
+preshed==3.0.9
+propcache==0.2.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyMuPDF==1.25.3
+pypdf==5.3.0
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-multipart==0.0.20
+pytz==2025.1
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+setuptools==75.8.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+starlette==0.45.3
+thinc==8.3.4
+tqdm==4.67.1
+typer==0.15.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+uvicorn==0.34.0
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.17.2
+yarl==1.18.3
